--- a/assets/pug/pages/template/blog-grid.pug
+++ b/assets/pug/pages/template/blog-grid.pug
@@ -156,22 +156,22 @@ html(lang='en')
                     li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")
                       div.card.p-0.group
                         div.blog-img.overflow-hidden.card-image(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
-                          img(src='../../assets/images/blog/blog-contains.webp' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-img')
+                          img(src='../../assets/images/blog/blog-contains.jpg' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-img')
                         div.card-body.px-3.flex.flex-col.gap-4.pb-3
                           div.flex.justify-between.items-center
                             div.flex.items-start.justify-between.gap-2.items-center(class="pt-[13px] first:pt-0 first:mt-0 first:border-none")  
                               div.avatar
                                 div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
-                                  img(src='../../assets/images/avatar/2.jpg' alt='avatar')
+                                  img(src='../../assets/images/avatar/10.jpg' alt='avatar')
                               div
                                 a(href="blog-grid.html")
-                                  p.text-title.font-bold(class="dark:text-white") Mitchel P. Lawyer
+                                  p.text-title.font-bold(class="dark:text-white") Erin M. Baker
                                 span.text-content Feb 6,2023
                             i(data-feather="more-vertical" class="h-5 stroke-content")
                           div
-                            h5(class="mb-2 font-bold dark:text-white") Cracking The Code 
-                            p(class="text-content") Lining hemline knee burgundy satin finish concealed 
-                              |small buttons rayon. Wardrobe stylish fitted long sleeves pleats the  
+                            h5(class="mb-2 font-bold dark:text-white") Mobile App Development
+                            p(class="text-content") Mobile Simple log in – logging in to your website is easy
+                              | They have added a dedicated login page inside the app. 
                               a(href="blog-detail.html" class="text-secondary hover:underline").decoration-1 Read more...
                           div
                             div.divider.w-full
@@ -181,12 +181,12 @@ html(lang='en')
                     li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
-                          img(src='../../assets/images/blog/robot.webp' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-img')
+                          img(src='../../assets/images/blog/robot.jpg' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-img')
                         div.card-body.px-3.flex.flex-col.gap-4.pb-3
                           div.flex.justify-between.items-center
                             div.flex.items-start.justify-between.gap-2.items-center(class="pt-[13px] first:pt-0 first:mt-0 first:border-none")
                               div.avatar 
-                                div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
+                                div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9") 
                                   img(src='../../assets/images/avatar/21.jpg' alt='avatar')
                               div
                                 a(href="blog-grid.html") 
@@ -194,9 +194,9 @@ html(lang='en')
                                 span.text-content Feb 2,2023
                             i(data-feather="more-vertical" class="h-5 stroke-content")
                           div
-                            h5(class="mb-2 font-bold dark:text-white") Take The Stress Out Of Code
-                            p(class="text-content") This could be used to hide someone's true
-                              | invasion of the Soviet Union was given the code name of Barbarossa  
+                            h5(class="mb-2 font-bold dark:text-white") Laptop and coffee
+                            p(class="text-content") This image captures the quintessential work setup - a laptop and a coffee cup.
+                              | The laptop screen is visible with some text and icons on it. 
                               a(href="blog-detail.html" class="text-secondary hover:underline").decoration-1 Read more...
                           div
                             div.divider.w-full 
@@ -206,22 +206,22 @@ html(lang='en')
                     li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
-                          img(src='../../assets/images/blog/blog-contains3.webp' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains3')
+                          img(src='../../assets/images/blog/blog-contains3.jpg' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains3')
                         div.card-body.px-3.flex.flex-col.gap-4.pb-3
                           div.flex.justify-between.items-center
                             div.flex.items-start.justify-between.gap-2.items-center(class="pt-[13px] first:pt-0 first:mt-0 first:border-none")
                               div.avatar 
                                 div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
-                                  img(src='../../assets/images/avatar/38.jpg' alt='avatar')
+                                  img(src='../../assets/images/avatar/24.jpg' alt='avatar')
                               div
                                 a(href="blog-grid.html")
-                                  p.text-title.font-bold(class="dark:text-white") Keith K. Levitt 
+                                  p.text-title.font-bold(class="dark:text-white") Jackie M. Martin
                                 span.text-content Jan 30,2023
                             i(data-feather="more-vertical" class="h-5 stroke-content")
-                          div 
-                            h5(class="mb-2 font-bold dark:text-white") Why I Hate
-                            p(class="text-content") We’ll show you how Duads BI lets you use all of
-                              | connections to inject data into R and then visualize and interact with the   
+                          div
+                            h5(class="mb-2 font-bold dark:text-white") Publish Policy 
+                            p(class="text-content") The new rules(DSA)
+                              | classify companies with more than 45 million users as very 
                               a(href="blog-detail.html" class="text-secondary hover:underline").decoration-1 Read more...
                           div
                             div.divider.w-full 
@@ -231,22 +231,22 @@ html(lang='en')
                     li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
-                          img(src='../../assets/images/blog/blog-contains5.webp' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains5')
+                          img(src='../../assets/images/blog/blog-contains5.jpg' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains5')
                         div.card-body.px-3.flex.flex-col.gap-4.pb-3
                           div.flex.justify-between.items-center
                             div.flex.items-start.justify-between.gap-2.items-center(class="pt-[13px] first:pt-0 first:mt-0 first:border-none")
                               div.avatar 
                                 div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
-                                  img(src='../../assets/images/avatar/20.jpg' alt='avatar')
+                                  img(src='../../assets/images/avatar/12.jpg' alt='avatar')
                               div
                                 a(href="blog-grid.html")
-                                  p.text-title.font-bold(class="dark:text-white") Mitchel P. Lawyer  
+                                  p.text-title.font-bold(class="dark:text-white") Mary S. Jelks
                                 span.text-content Jan 25,2023  
                             i(data-feather="more-vertical" class="h-5 stroke-content")
                           div 
-                            h5(class="mb-2 font-bold dark:text-white") Take The Stress Out Of Code
-                            p(class="text-content")  We’ll show you how Duads BI lets you use all of
-                              | connections to inject data into R and then visualize and interact with the
+                            h5(class="mb-2 font-bold dark:text-white") Revolutionizing Startups
+                            p(class="text-content") The image showcases the critical successful startup, 
+                              | such as market analysis 
                               a(href="blog-detail.html" class="text-secondary hover:underline").decoration-1 Read more...
                           div
                             div.divider.w-full 
@@ -256,7 +256,7 @@ html(lang='en')
                     li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
-                          img(src='../../assets/images/blog/blog-contains6.webp' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains6')
+                          img(src='../../assets/images/blog/blog-contains6.jpg' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains6')
                         div.card-body.px-3.flex.flex-col.gap-4.pb-3
                           div.flex.justify-between.items-center
                             div.flex.items-start.justify-between.gap-2.items-center(class="pt-[13px] first:pt-0 first:mt-0 first:border-none")
@@ -269,9 +269,9 @@ html(lang='en')
                                 span.text-content Jan 5,2023
                             i(data-feather="more-vertical" class="h-5 stroke-content")
                           div 
-                            h5(class="mb-2 font-bold dark:text-white") The Death Of Avoid It Code 
-                            p(class="text-content")  Are you wondering how to get a text short code and get started with 
-                              | reaching your customers in new SMS into your short steps.  
+                            h5(class="mb-2 font-bold dark:text-white") Cozy Workspace
+                            p(class="text-content")  AThe image is designed to convey a sense of comfort and warmth, 
+                              | as seen from the soft lighting and the cozy wooden 
                               a(href="blog-detail.html" class="text-secondary hover:underline").decoration-1 Read more...
                           div 
                             div.divider.w-full
@@ -281,22 +281,22 @@ html(lang='en')
                     li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
-                          img(src='../../assets/images/blog/blog-contains7.webp' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains7')
+                          img(src='../../assets/images/blog/blog-contains7.jpg' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains7')
                         div.card-body.px-3.flex.flex-col.gap-4.pb-3
                           div.flex.justify-between.items-center
                             div.flex.items-start.justify-between.gap-2.items-center(class="pt-[13px] first:pt-0 first:mt-0 first:border-none")
                               div.avatar 
                                 div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
-                                  img(src='../../assets/images/avatar/38.jpg' alt='avatar')
+                                  img(src='../../assets/images/avatar/6.jpg' alt='avatar')
                               div
                                 a(href="blog-grid.html")
-                                  p.text-title.font-bold(class="dark:text-white") Mitchel P. Lawyer  
+                                  p.text-title.font-bold(class="dark:text-white") Effie J. Frazier 
                                 span.text-content Jan 1,2023
                             i(data-feather="more-vertical" class="h-5 stroke-content")
                           div 
                             h5(class="mb-2 font-bold dark:text-white") The Biggest Lie In The Code 
                             p(class="text-content")  I think programming plays a huge role in our lives,
-                              | and every kid should definitely be taught programming at some point during their education 
+                              | and every kid should definitely be taught programming at some point during their education  
                               a(href="blog-detail.html" class="text-secondary hover:underline").decoration-1 Read more...
                           div
                             div.divider.w-full 
@@ -306,7 +306,7 @@ html(lang='en')
                     li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
-                          img(src='../../assets/images/blog/blog-contains8.webp' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains8')
+                          img(src='../../assets/images/blog/blog-contains8.jpg' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains8')
                         div.card-body.px-3.flex.flex-col.gap-4.pb-3
                           div.flex.justify-between.items-center
                             div.flex.items-start.justify-between.gap-2.items-center(class="pt-[13px] first:pt-0 first:mt-0 first:border-none")
@@ -321,7 +321,7 @@ html(lang='en')
                           div 
                             h5(class="mb-2 font-bold dark:text-white") Old School Coded 
                             p(class="text-content")  In particular I learned about our mental and physical limits,
-                              | the nature of stress and anxiety, and most importantly, how to take care of myself so that I could stop this happening again.
+                              | the nature of stress and anxiety, and most importantly, how to take care of myself so that I could stop this happening again. 
                               a(href="blog-detail.html" class="text-secondary hover:underline").decoration-1 Read more...
                           div
                             div.divider.w-full 
@@ -331,7 +331,7 @@ html(lang='en')
                     li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
-                          img(src='../../assets/images/blog/blog-contains9.webp' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains9')
+                          img(src='../../assets/images/blog/blog-contains9.jpg' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains9')
                         div.card-body.px-3.flex.flex-col.gap-4.pb-3
                           div.flex.justify-between.items-center
                             div.flex.items-start.justify-between.gap-2.items-center(class="pt-[13px] first:pt-0 first:mt-0 first:border-none")
@@ -356,7 +356,7 @@ html(lang='en')
                     li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
-                          img(src='../../assets/images/blog/blog-contains10.webp' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains10')
+                          img(src='../../assets/images/blog/blog-contains10.jpg' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains10')
                         div.card-body.px-3.flex.flex-col.gap-4.pb-3
                           div.flex.justify-between.items-center
                             div.flex.items-start.justify-between.gap-2.items-center(class="pt-[13px] first:pt-0 first:mt-0 first:border-none")
