--- a/assets/pug/pages/template/user-profile.pug
+++ b/assets/pug/pages/template/user-profile.pug
@@ -549,7 +549,7 @@ html(lang='en')
               h5.text-center.font-semibold(class="dark:text-white") Add team member or new ones
               div.search-box.relative
                 input(class="border border-border-light dark:border dark:border-border-dark dark:text-white dark:bg-sidebar-dark2 rounded-5 w-full py-[11px] pl-[25px] pr-[55px]  text-xs font-semibold text-title" placeholder="Type to Search..." type="search")       
-                +SVG_ICON("Search"," cursor-pointer cursor-pointer xl:hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white top-1/2 -translate-y-1/2 right-[25px] absolute")
+                +SVG_ICON("Search"," cursor-pointer  xl:hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white top-1/2 -translate-y-1/2 right-[25px] absolute")
                 i(data-feather="x" class="search-close hidden cursor-pointer xl:block w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute")
               ul.flex.flex-col.gap-3 
                 li.flex.justify-between.items-center.add-friend
